--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"$schema": "https://raw.githubusercontent.com/atampy25/simple-mod-framework/main/Mod%20Manager/src/lib/manifest-schema.json",
-	"version": "0.1.0",
-	"id": "YourPreferredAlias.AnIDForTheMod",
-	"name": "Test Mod",
-	"description": "A truly amazing mod",
-	"authors": ["Your Preferred Alias"],
-	"frameworkVersion": "2.25.1"
+  "version": "0.8.0",
+  "id": "Minnow.MoreFreelancerTargets",
+  "name": "MoreFreelancerTargets",
+  "description": "Adds more potential targets to the random pool used by Freelancer's Territory Takedown (AKA 'Mild') missions.",
+  "authors": ["Minnow"],
+  "contentFolders": ["content"],
+  "frameworkVersion": "2.21.2"
 }
